--- a/index.njk
+++ b/index.njk
@@ -164,7 +164,7 @@ description: My personal website and blog!
                   An Implementation of the Quantum Verification of Matrix Products Algorithm
                 </a></b>
                 <br>
-	            Elton Pinto, Jeffrey Young, Thomas Conte, Austim Adams, Eugene Dumitrescu
+	            Elton Pinto, Jeffrey Young, Thomas Conte, Austin Adams, Eugene Dumitrescu
                 <br>
                 4th International Workshop on Quantum Resource Estimation, QRE
                 2022. Proceedings of the 49th Annual International Symposium on
