Update landing page

--- a/index.njk
+++ b/index.njk
@@ -34,6 +34,10 @@ description: My personal website and blog!
               Advised by <a
               href="https://www.microsoft.com/en-us/research/people/daan/">Daan
               Leijen</a>
+              and
+              <a href="https://vsarkar.cc.gatech.edu/">
+                Prof. Vivek Sarkar
+              </a>
               </small>
             </li>
 
@@ -45,25 +49,6 @@ description: My personal website and blog!
               <br>
               <small>
               Advised by <a href="https://faculty.cc.gatech.edu/~atumanov/">Prof. Alexey Tumanov</a>
-              </small>
-            </li>
-
-            <li>
-              <a href="{{ projects.neko.url }}" target="_blank">Neko</a>, a quantum map-filter-reduce
-              programming language
-              <br>
-              <small>
-              Independent study
-              </small>
-            </li>
-
-            <li>
-              Extending the <a href="{{ projects.automphc.url }}">AutoMPHC</a>
-              project to handle intra-node automatic parallelization of Python
-              programs using OpenMP/CUDA
-              <small>
-              <br>
-              Advised by <a href="https://vsarkar.cc.gatech.edu/">Prof. Vivek Sarkar</a>
               </small>
             </li>
           </ul>
