udpate landing page

--- a/index.njk
+++ b/index.njk
@@ -133,9 +133,9 @@ description: My personal website and blog!
         <h2> Publications </h2>
         <ul>
             <li>
-                <b><a href="{{ projects.neko.url }}">
+                <b>
                   Neko: A quantum map-filter-reduce programming language
-                </a></b>
+                </b>
                 <br>
                 Elton Pinto
                 <br>
@@ -143,6 +143,8 @@ description: My personal website and blog!
                 SIGPLAN-SIGACT Symposium on Principles of Programming Languages
                 (POPL'23)
                 <br>
+                <a href="/assets/work/neko-popl23src.pdf">abstract</a>
+                <a href="/assets/work/neko-popl23src-poster.pdf">poster</a>
             </li>
             <li>
                 <b><a href="https://arxiv.org/abs/2208.09914">
