--- a/index.njk
+++ b/index.njk
@@ -18,7 +18,7 @@ description: My personal website and blog!
 <div class="content">
     <section>
         <p>
-            I'm a Masters student at Georgia Tech.
+            I'm a Master's student at Georgia Tech.
         </p>
 
         <h3>Research</h3>
