--- a/index.njk
+++ b/index.njk
@@ -133,6 +133,16 @@ description: My personal website and blog!
         <h2> Publications </h2>
         <ul>
             <li>
+                <b><a href="/assets/work/mthesis-perceus-for-ocaml.pdf">
+                  Perceus for OCaml
+                </a></b>
+                <br>
+	            Elton Pinto
+                <br>
+	            M.S. Thesis. Georgia Institute of Technology, May 2023.
+                <br>
+            </li>
+            <li>
                 <b>
                   Neko: A quantum map-filter-reduce programming language
                 </b>
@@ -164,7 +174,7 @@ description: My personal website and blog!
                 <br>
 	            Elton Pinto
                 <br>
-	            B.S. Thesis. Georgia Institute of Technology, TINKER Lab, May 2022.
+	            B.S. Thesis. Georgia Institute of Technology, May 2022.
                 <br>
                 <em>Third place (Explore category), UROP Symposium 2022</em>
             </li>
