--- a/blog/index.njk
+++ b/blog/index.njk
@@ -5,6 +5,16 @@ title: lexically::scoped | blog
 
 <div class="content">
     <h2>lexically :: scoped</h2>
+    <ul>
+        {%- for post in collections.posts | reverse -%}
+            <li>
+                <a href="{{ post.url }}">{{ post.data.title | safe }}</a>
+                <small class="muted">{{ post.data.date | readableDate }}</small>
+            </li>
+        {%- endfor -%}
+    </ul>
+
+<!--
     <div>
         {%- for post in collections.posts | reverse -%}
         <div class="post">
@@ -19,3 +29,5 @@ title: lexically::scoped | blog
         {%- endfor -%}
     </div>
 </div>
+
+-->
