--- a/index.njk
+++ b/index.njk
@@ -13,48 +13,36 @@ description: My personal website and blog!
 ---
 
 <div class="splash">
-    <h1 class="splash__title">Hi, I'm Elton</h1>
+    <h1 class="splash__title">Elton Pinto</h1>
 </div>
 <div class="content">
-    <section>
-        <p>
-            I'm a Master's student at Georgia Tech.
-        </p>
+      <p>
+          Sutter Hill Ventures Codepoint Fellow-In-Residence
+            <small class="muted">
+              with
+              <a href="https://www.observeinc.com/">Observe</a> and
+              <a href="https://www.luminarycloud.com/">Luminary Cloud</a>
+            </small>
+          <br>
+          Incoming PhD student at the University of Pennsylvania (Fall'24)
+          <br>
 
+          <small><a href="#publications">Publications</a></small>
+          <small><a href="/assets/cv.pdf">CV</a></small>
+          <small><a href="/assets/resume.pdf">Resume</a></small>
+      </p>
+
+    <section>
         <h3>Research</h3>
         <p>I'm interested in tackling problems at the intersection between programming languages and systems.</p>
         <p>
-          I'm currently working on the following projects:
-          <ul>
-            <li>
-              Replacing OCaml's GC with <a
-              href="https://www.microsoft.com/en-us/research/publication/perceus-garbage-free-reference-counting-with-reuse/">Perceus</a>
-              <br>
-              <small>
-              Advised by <a
-              href="https://www.microsoft.com/en-us/research/people/daan/">Daan
-              Leijen</a>
-              and
-              <a href="https://vsarkar.cc.gatech.edu/">
-                Prof. Vivek Sarkar
-              </a>
-              </small>
-            </li>
-
-            <li>
-              Mudos, a novel device-driver model that gives
-              the kernel more control over the virtualization and
-              scheduling of compute devices like GPUs, TPUs, and custom
-              accelerators
-              <br>
-              <small>
-              Advised by <a href="https://faculty.cc.gatech.edu/~atumanov/">Prof. Alexey Tumanov</a>
-              </small>
-            </li>
-          </ul>
+          During my master's, I worked with
+            <a href="https://www.microsoft.com/en-us/research/people/daan/">Daan Leijen</a>
+          on prototyping an implementation of
+            <a href="https://www.microsoft.com/en-us/research/publication/perceus-garbage-free-reference-counting-with-reuse/">Perceus memory management</a> for OCaml.
         </p>
         <p>
-          During my undergrad I was part of the <a
+          During my undergrad I was part of <a
           href="http://prod.tinker.cc.gatech.edu/" target="_blank">TINKER
           lab</a> where I was advised by <a
           href="https://www.scs.gatech.edu/people/thomas-conte"
@@ -65,59 +53,17 @@ description: My personal website and blog!
           products (QVMP) algorithm.
         </p>
 
-        <small><a href="#publications">View publications</a></small>
+      </section>
 
+      <section>
         <h3>Experience</h3>
         <p>
-        I've interned on the Privacy Language Experience (PLex) team and the PyTorch Dev Infra team at Meta, and the Innovation Lab at NCR.
+        I've interned on the Privacy Language Experience (PLeX) team and the PyTorch Dev Infra team at Meta, and the Innovation Lab at NCR.
         </p>
 
-        <small><a href="/assets/resume.pdf">View resume</a></small>
-        <br>
-        <small><a href="/assets/cv.pdf">View CV</a></small>
+      </section>
 
-        <h3>Involvements</h3>
-
-        <ul>
-            <li>
-                <a href="{{ gatech.dtyped.main }}" target="_blank">dependently-typed</a>:
-                Founder and President
-                <small class="muted">(August 2021 to present)</small>
-            </li>
-            <li>
-                <a href="{{ gatech.hackgt.main }}" target="_blank">HexLabs</a> (formerly HackGT):
-                <ul>
-                    <li>Co-director
-                        <small class="muted">(November 2020 to November 2021)</small>
-                    </li>
-                    <li>
-                        <a href="{{ gatech.hackgt.horizons }}" target="_blank">Horizons</a> event-lead
-                        <small class="muted">(January 2020 to March 2020)</small>
-                    </li>
-                    <li>
-                        <a href="{{ gatech.hackgt.catalyst }}" target="_blank">Catalyst</a> mentor
-                        <small class="muted">(March 2019)</small>
-                    </li>
-                    <li>Tech team member
-                        <small class="muted">(December 2018 to November 2021)</small>
-                    </li>
-                </ul>
-            </li>
-            <li> Teaching assistantship:
-                 <ul>
-                    <li>CS 3210: Design of Operating Systems <small class="muted">(Spring 2022 [Head TA], Fall 2021, Spring 2021)</small></li>
-                    <li>CS 2110: Computer Organization and Programming <small class="muted">(Fall 2020, Spring 2020)</small></li>
-                    <li>CS 1301: Intro to Computing <small class="muted">(Fall 2019)</small></li>
-                 </ul>
-            </li>
-        </ul>
-
-        <p>
-            You can find my projects on <a href="{{ me.socials.github.url }}" target="_blank">GitHub</a>.
-        </p>
-    </section>
-
-    <section id="publications">
+      <section id="publications">
         <h3> Publications </h3>
         <ul>
             <li>
@@ -174,6 +120,47 @@ description: My personal website and blog!
 	            Austin Adams, Elton Pinto, Jeffrey Young, Creston Herold, Eugene Dumitrescu, Thomas Conte
                 <br>
                 2021 International Conference on Rebooting Computing (ICRC 2021)
+            </li>
+        </ul>
+    </section>
+
+
+
+      <section>
+
+        <h3>Involvements</h3>
+
+        <ul>
+            <li>
+                <a href="{{ gatech.dtyped.main }}" target="_blank">dependently-typed</a>:
+                Founder and President
+                <small class="muted">(August 2021 to May 2023)</small>
+            </li>
+            <li>
+                <a href="{{ gatech.hackgt.main }}" target="_blank">HexLabs</a> (formerly HackGT):
+                <ul>
+                    <li>Co-director
+                        <small class="muted">(November 2020 to November 2021)</small>
+                    </li>
+                    <li>
+                        <a href="{{ gatech.hackgt.horizons }}" target="_blank">Horizons</a> event-lead
+                        <small class="muted">(January 2020 to March 2020)</small>
+                    </li>
+                    <li>
+                        <a href="{{ gatech.hackgt.catalyst }}" target="_blank">Catalyst</a> mentor
+                        <small class="muted">(March 2019)</small>
+                    </li>
+                    <li>Tech team member
+                        <small class="muted">(December 2018 to November 2021)</small>
+                    </li>
+                </ul>
+            </li>
+            <li> Teaching assistantship:
+                 <ul>
+                    <li>CS 3210: Design of Operating Systems <small class="muted">(Spring 2022 [Head TA], Fall 2021, Spring 2021)</small></li>
+                    <li>CS 2110: Computer Organization and Programming <small class="muted">(Fall 2020, Spring 2020)</small></li>
+                    <li>CS 1301: Intro to Computing <small class="muted">(Fall 2019)</small></li>
+                 </ul>
             </li>
         </ul>
     </section>
