Update home page

--- a/index.njk
+++ b/index.njk
@@ -27,7 +27,6 @@ description: My personal website and blog!
           Incoming PhD student at the University of Pennsylvania (Fall'24)
           <br>
 
-          <small><a href="#publications">Publications</a></small>
           <small><a href="/assets/cv.pdf">CV</a></small>
           <small><a href="/assets/resume.pdf">Resume</a></small>
       </p>
@@ -55,17 +54,20 @@ description: My personal website and blog!
 
       </section>
 
-      <section>
-        <h3>Experience</h3>
-        <p>
-        I've interned on the Privacy Language Experience (PLeX) team and the PyTorch Dev Infra team at Meta, and the Innovation Lab at NCR.
-        </p>
-
-      </section>
-
       <section id="publications">
         <h3> Publications </h3>
         <ul>
+            <li>
+                <b><a href="https://www.microsoft.com/en-us/research/uploads/prod/2023/09/ocamlrc.pdf">
+                  Exploring Perceus for OCaml
+                </a></b>
+                <br>
+	            Elton Pinto, Daan Leijen
+                <br>
+	            Higher-order, Typed, Inferred, Strict: ML Family Workshop, ICFP'23
+                <br>
+            </li>
+
             <li>
                 <b><a href="/assets/work/mthesis-perceus-for-ocaml.pdf">
                   Perceus for OCaml
@@ -83,9 +85,7 @@ description: My personal website and blog!
                 <br>
                 Elton Pinto
                 <br>
-                Student Research Competition (SRC). Proceedings of the 50th ACM
-                SIGPLAN-SIGACT Symposium on Principles of Programming Languages
-                (POPL'23)
+                Student Research Competition (SRC). POPL'23
                 <br>
                 <a href="/assets/work/neko-popl23src.pdf">abstract</a>
                 <a href="/assets/work/neko-popl23src-poster.pdf">poster</a>
@@ -97,9 +97,7 @@ description: My personal website and blog!
                 <br>
 	            Elton Pinto, Jeffrey Young, Thomas Conte, Austin Adams, Eugene Dumitrescu
                 <br>
-                4th International Workshop on Quantum Resource Estimation, QRE
-                2022. Proceedings of the 49th Annual International Symposium on
-                Computer Architecture (ISCA'22) 
+                4th International Workshop on Quantum Resource Estimation (QRE). ISCA'22
             </li>
             <li>
                 <b><a href="https://arxiv.org/abs/2208.09914">
@@ -119,14 +117,19 @@ description: My personal website and blog!
                 <br>
 	            Austin Adams, Elton Pinto, Jeffrey Young, Creston Herold, Eugene Dumitrescu, Thomas Conte
                 <br>
-                2021 International Conference on Rebooting Computing (ICRC 2021)
+                2021 International Conference on Rebooting Computing (ICRC'21)
             </li>
         </ul>
     </section>
 
+    <section>
+        <h3>Work Experience</h3>
+        <p>
+        I've interned on the Privacy Language Experience (PLeX) team and the PyTorch Dev Infra team at Meta, and the Innovation Lab at NCR.
+        </p>
+    </section>
 
-
-      <section>
+    <section>
 
         <h3>Involvements</h3>
 
