--- a/index.njk
+++ b/index.njk
@@ -17,23 +17,18 @@ description: My personal website and blog!
 </div>
 <div class="content">
       <p>
-          Sutter Hill Ventures Codepoint Fellow-In-Residence
-            <small class="muted">
-              with
-              <a href="https://www.observeinc.com/">Observe</a> and
-              <a href="https://www.luminarycloud.com/">Luminary Cloud</a>
-            </small>
-          <br>
-          Incoming PhD student at the University of Pennsylvania (Fall'24)
+          PhD student at Georgia Tech
           <br>
 
-          <small><a href="/assets/cv.pdf">CV</a></small>
+          <!-- <small><a href="/assets/cv.pdf">CV</a></small> -->
           <small><a href="/assets/resume.pdf">Resume</a></small>
       </p>
 
     <section>
         <h3>Research</h3>
-        <p>I'm interested in tackling problems at the intersection between programming languages and systems.</p>
+        <p>I currently work on LLM inference systems and solver-based job scheduling. On the inference side, I'm a project lead on <a href="https://project-vajra.github.io/">Vajra</a>, studying hierarchical prefix caching and tensor exchange mechanisms. More broadly, I enjoy solving problems at the intersection of systems and
+   programming languages.</p> 
+        <p>Last summer I interned at Uber's Programming Systems Group, where I developed a parallel version of the RTA callgraph construction algorithm for the Go programming language.</p>
         <p>
           During my master's, I worked with
             <a href="https://www.microsoft.com/en-us/research/people/daan/">Daan Leijen</a>
@@ -57,6 +52,28 @@ description: My personal website and blog!
       <section id="publications">
         <h3> Publications </h3>
         <ul>
+            <li>
+                <b><a href="https://www.arxiv.org/abs/2601.00397">
+                  Revati: Transparent GPU-Free Time-Warp Emulation for LLM Serving
+                </a></b>
+                <br>
+	            Amey Agrawal, Mayank Yadav, Sukrit Kumar, Anirudha Agrawal, Garv Ghai, Souradeep Bera, Elton Pinto, Sirish Gambhira, Mohammad Adain, Kasra Sohrab, Chus Antonanzas, Alexey Tumanov
+                <br>
+	            arXiv
+                <br>
+            </li>
+
+            <li>
+                <b><a href="https://arxiv.org/abs/2503.20191">
+                  Maya: Optimizing Deep Learning Training Workloads using GPU Runtime Emulation
+                </a></b>
+                <br>
+	            Srihas Yarlagadda*, Amey Agrawal*, Elton Pinto*, Hakesh Darapaneni, Mitali Meratwal, Shivam Mittal, Pranavi Bajjuri, Srinivas Sridharan, Alexey Tumanov
+                <br>
+	            EuroSys'26
+                <br>
+            </li>
+
             <li>
                 <b><a href="https://www.microsoft.com/en-us/research/uploads/prod/2023/09/ocamlrc.pdf">
                   Exploring Perceus for OCaml
@@ -122,10 +139,17 @@ description: My personal website and blog!
         </ul>
     </section>
 
+<!--
     <section>
         <h3>Work Experience</h3>
         <p>
-        I've interned on the Privacy Language Experience (PLeX) team and the PyTorch Dev Infra team at Meta, and the Innovation Lab at NCR.
+        Last summer, I interned 
+        </p>
+        <p>
+        I worked at Observe (now acquired by Snowflake) for a year as part of the Sutter Hill Codepoint Fellowship.
+        </p>
+        <p>
+        During my undergrad, I interned on the Privacy Language Experience (PLeX) team and the PyTorch Dev Infra team at Meta, and the Innovation Lab at NCR.
         </p>
     </section>
 
@@ -192,4 +216,5 @@ description: My personal website and blog!
         </ul>
     </section>
 
+-->
 </div>
