--- a/index.njk
+++ b/index.njk
@@ -49,6 +49,14 @@ description: My personal website and blog!
 
       </section>
 
+    <section>
+      <h3>Fellowships</h3>
+      <ul>
+        <li>Sutter Hill Ventures Codepoint Fellowship (2023-2024)</li>
+        <li><a href="https://grad.gatech.edu/news/national-science-foundation-awards-38-tech-students-prestigious-fellowship">NSF GRFP</a> (declined to pursue SHV fellowship)</li>
+      </ul>
+    </section>
+
       <section id="publications">
         <h3> Publications </h3>
         <ul>
